#SUBDIRS = 00_LinearEquations \
#01_LinearLeastSquaresProblems \
#02_GeneralizedLinearLeastSquaresProblems \
#03_SymmetricEigenproblems \
#04_NonsymmetricEigenproblems \
#05_SingularValueDecomposition \
#06_GeneralizedSymmetricDefiniteEigenproblems \
#07_GeneralizedNonSymmetricEigenproblems \
#08_GeneralizedSingularValueDecomposition

SUBDIRS = 04_NonsymmetricEigenproblems \
05_SingularValueDecomposition \
99_Miscellaneous
