lib_LTLIBRARIES = 

if ENABLE__FLOAT128
lib_LTLIBRARIES += libmplapack__Float128_ref.la
endif

if ENABLE_DD
lib_LTLIBRARIES += libmplapack_dd_ref.la
endif

if ENABLE_GMP
lib_LTLIBRARIES += libmplapack_gmp_ref.la
endif

if ENABLE_MPFR
lib_LTLIBRARIES += libmplapack_mpfr_ref.la
endif

if ENABLE_QD
lib_LTLIBRARIES += libmplapack_qd_ref.la
endif

if ENABLE_DOUBLE
lib_LTLIBRARIES += libmplapack_double_ref.la
endif

if ENABLE__FLOAT64X
lib_LTLIBRARIES += libmplapack__Float64x_ref.la
endif

if ENABLE_GMP
libmplapack_gmp_ref_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -I$(GMP_INCLUDEDIR) -D___MPLAPACK_BUILD_WITH_GMP___
libmplapack_gmp_ref_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack_gmp_ref_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE_MPFR
libmplapack_mpfr_ref_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -I$(GMP_INCLUDEDIR) -I$(MPFR_INCLUDEDIR)  -I$(MPC_INCLUDEDIR) -I$(top_srcdir)/mpfrc++ -D___MPLAPACK_BUILD_WITH_MPFR___
libmplapack_mpfr_ref_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack_mpfr_ref_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE_QD
libmplapack_qd_ref_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -I$(QD_INCLUDEDIR) -D___MPLAPACK_BUILD_WITH_QD___
libmplapack_qd_ref_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack_qd_ref_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE_DD
libmplapack_dd_ref_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -I$(QD_INCLUDEDIR) -D___MPLAPACK_BUILD_WITH_DD___
libmplapack_dd_ref_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack_dd_ref_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE_DOUBLE
libmplapack_double_ref_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -D___MPLAPACK_BUILD_WITH_DOUBLE___
libmplapack_double_ref_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack_double_ref_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE__FLOAT64X
libmplapack__Float64x_ref_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -D___MPLAPACK_BUILD_WITH__FLOAT64X___
libmplapack__Float64x_ref_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack__Float64x_ref_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

if ENABLE__FLOAT128
libmplapack__Float128_ref_la_CPPFLAGS = $(OPENMP_CXXFLAGS) -I$(top_srcdir)/include -D___MPLAPACK_BUILD_WITH__FLOAT128___
libmplapack__Float128_ref_la_SOURCES = $(MPLAPACK_SOURCES)
if IS_MACOSX
libmplapack__Float128_ref_la_LDFLAGS = -Wl,-flat_namespace,-undefined,dynamic_lookup
endif
endif

MPLAPACK_SOURCES = \
Cbdsqr.cpp \
Cdrscl.cpp \
Cgbsv.cpp \
Cgbtf2.cpp \
Cgbtrf.cpp \
Cgbtrs.cpp \
Cgebak.cpp \
Cgebal.cpp \
Cgebd2.cpp \
Cgebrd.cpp \
Cgees.cpp \
Cgeev.cpp \
Cgehd2.cpp \
Cgehrd.cpp \
Cgelq.cpp \
Cgelq2.cpp \
Cgelqf.cpp \
Cgelqt.cpp \
Cgelqt3.cpp \
Cgemlqt.cpp \
Cgemqrt.cpp \
Cgeql2.cpp \
Cgeqlf.cpp \
Cgeqr.cpp \
Cgeqr2.cpp \
Cgeqr2p.cpp \
Cgeqrf.cpp \
Cgeqrfp.cpp \
Cgeqrt.cpp \
Cgeqrt2.cpp \
Cgeqrt3.cpp \
Cgerq2.cpp \
Cgerqf.cpp \
Cgesv.cpp \
Cgesvd.cpp \
Cgetc2.cpp \
Cgetf2.cpp \
Cgetrf.cpp \
Cgetrf2.cpp \
Cgetri.cpp \
Cgetrs.cpp \
Cgetsqrhrt.cpp \
Cggbak.cpp \
Cgtsv.cpp \
Cgttrs.cpp \
Cgtts2.cpp \
Chbev.cpp \
Chbtrd.cpp \
Cheev.cpp \
Chegs2.cpp \
Chegst.cpp \
Chesv.cpp \
Chesv_rook.cpp \
Cheswapr.cpp \
Chetd2.cpp \
Chetf2.cpp \
Chetf2_rk.cpp \
Chetf2_rook.cpp \
Chetrd.cpp \
Chetrf.cpp \
Chetrf_rk.cpp \
Chetrf_rook.cpp \
Chetri.cpp \
Chetri2.cpp \
Chetri2x.cpp \
Chetri_3.cpp \
Chetri_3x.cpp \
Chetri_rook.cpp \
Chetrs.cpp \
Chetrs2.cpp \
Chetrs_3.cpp \
Chetrs_aa.cpp \
Chetrs_rook.cpp \
Chfrk.cpp \
Chpev.cpp \
Chpsv.cpp \
Chptrd.cpp \
Chptrf.cpp \
Chptrs.cpp \
Chseqr.cpp \
Cla_wwaddw.cpp \
Clabrd.cpp \
Clacgv.cpp \
Clacn2.cpp \
Clacp2.cpp \
Clacpy.cpp \
Clacrm.cpp \
Clacrt.cpp \
Cladiv.cpp \
Claesy.cpp \
Claev2.cpp \
Clagtm.cpp \
Clahef.cpp \
Clahef_rk.cpp \
Clahef_rook.cpp \
Clahqr.cpp \
Clahr2.cpp \
Clamswlq.cpp \
Clamtsqr.cpp \
Clange.cpp \
Clangt.cpp \
Clanhb.cpp \
Clanhe.cpp \
Clanhp.cpp \
Clanht.cpp \
Clansy.cpp \
Clapmr.cpp \
Clapmt.cpp \
Claqgb.cpp \
Claqge.cpp \
Claqhb.cpp \
Claqhe.cpp \
Claqhp.cpp \
Claqr0.cpp \
Claqr1.cpp \
Claqr2.cpp \
Claqr3.cpp \
Claqr4.cpp \
Claqr5.cpp \
Claqsb.cpp \
Claqsp.cpp \
Claqsy.cpp \
Clar1v.cpp \
Clar2v.cpp \
Clarf.cpp \
Clarfb.cpp \
Clarfb_gett.cpp \
Clarfg.cpp \
Clarfgp.cpp \
Clarft.cpp \
Clarfx.cpp \
Clarfy.cpp \
Clargv.cpp \
Clarscl2.cpp \
Clartg.cpp \
Clartv.cpp \
Clarz.cpp \
Clarzb.cpp \
Clarzt.cpp \
Clascl.cpp \
Clascl2.cpp \
Claset.cpp \
Clasr.cpp \
Classq.cpp \
Claswlq.cpp \
Claswp.cpp \
Clasyf.cpp \
Clasyf_rk.cpp \
Clasyf_rook.cpp \
Clatrd.cpp \
Clatrs.cpp \
Clatrz.cpp \
Clatsqr.cpp \
Claunhr_col_getrfnp.cpp \
Claunhr_col_getrfnp2.cpp \
Clauu2.cpp \
Clauum.cpp \
Cpbequ.cpp \
Cpbsv.cpp \
Cpbtf2.cpp \
Cpbtrf.cpp \
Cpbtrs.cpp \
Cpoequ.cpp \
Cposv.cpp \
Cpotf2.cpp \
Cpotrf.cpp \
Cpotrf2.cpp \
Cpotri.cpp \
Cpotrs.cpp \
Cppequ.cpp \
Cppsv.cpp \
Cpptrf.cpp \
Cpptrs.cpp \
Cptcon.cpp \
Cptsv.cpp \
Cpttrf.cpp \
Cpttrs.cpp \
Cptts2.cpp \
Crot.cpp \
Cspmv.cpp \
Cspr.cpp \
Cspsv.cpp \
Csptrf.cpp \
Csptrs.cpp \
Csteqr.cpp \
Csyconv.cpp \
Csyconvf.cpp \
Csyconvf_rook.cpp \
Csymv.cpp \
Csyr.cpp \
Csyswapr.cpp \
Csytf2.cpp \
Csytf2_rk.cpp \
Csytf2_rook.cpp \
Csytrf.cpp \
Csytrf_rk.cpp \
Csytrf_rook.cpp \
Csytri.cpp \
Csytri2.cpp \
Csytri2x.cpp \
Csytri_3.cpp \
Csytri_3x.cpp \
Csytrs.cpp \
Csytrs2.cpp \
Csytrs_3.cpp \
Csytrs_aa.cpp \
Csytrs_rook.cpp \
Ctbtrs.cpp \
Ctgex2.cpp \
Ctgexc.cpp \
Ctplqt.cpp \
Ctplqt2.cpp \
Ctpmlqt.cpp \
Ctpmqrt.cpp \
Ctpqrt.cpp \
Ctpqrt2.cpp \
Ctprfb.cpp \
Ctptrs.cpp \
Ctpttr.cpp \
Ctrevc3.cpp \
Ctrexc.cpp \
Ctrsen.cpp \
Ctrsyl.cpp \
Ctrti2.cpp \
Ctrtri.cpp \
Ctrtrs.cpp \
Ctrttp.cpp \
Ctzrzf.cpp \
Cunbdb5.cpp \
Cunbdb6.cpp \
Cung2l.cpp \
Cung2r.cpp \
Cungbr.cpp \
Cunghr.cpp \
Cungl2.cpp \
Cunglq.cpp \
Cungql.cpp \
Cungqr.cpp \
Cungr2.cpp \
Cungrq.cpp \
Cungtr.cpp \
Cungtsqr.cpp \
Cunhr_col.cpp \
Cunm2l.cpp \
Cunm2r.cpp \
Cunmbr.cpp \
Cunmhr.cpp \
Cunml2.cpp \
Cunmlq.cpp \
Cunmqr.cpp \
Cunmr2.cpp \
Cunmr3.cpp \
Cupgtr.cpp \
Mutils.cpp \
RCsum1.cpp \
Rbbcsd.cpp \
Rbdsdc.cpp \
Rbdsqr.cpp \
Rbdsvdx.cpp \
Rcombssq.cpp \
Rdisna.cpp \
Rgbbrd.cpp \
Rgbcon.cpp \
Rgbequ.cpp \
Rgbequb.cpp \
Rgbrfs.cpp \
Rgbsv.cpp \
Rgbsvx.cpp \
Rgbtf2.cpp \
Rgbtrf.cpp \
Rgbtrs.cpp \
Rgebak.cpp \
Rgebal.cpp \
Rgebd2.cpp \
Rgebrd.cpp \
Rgecon.cpp \
Rgeequ.cpp \
Rgeequb.cpp \
Rgees.cpp \
Rgeesx.cpp \
Rgeev.cpp \
Rgeevx.cpp \
Rgehd2.cpp \
Rgehrd.cpp \
Rgejsv.cpp \
Rgelq.cpp \
Rgelq2.cpp \
Rgelqf.cpp \
Rgelqt.cpp \
Rgelqt3.cpp \
Rgels.cpp \
Rgelsd.cpp \
Rgelss.cpp \
Rgelsy.cpp \
Rgemlq.cpp \
Rgemlqt.cpp \
Rgemqr.cpp \
Rgemqrt.cpp \
Rgeql2.cpp \
Rgeqlf.cpp \
Rgeqp3.cpp \
Rgeqr.cpp \
Rgeqr2.cpp \
Rgeqr2p.cpp \
Rgeqrf.cpp \
Rgeqrfp.cpp \
Rgeqrt.cpp \
Rgeqrt2.cpp \
Rgeqrt3.cpp \
Rgerfs.cpp \
Rgerq2.cpp \
Rgerqf.cpp \
Rgesc2.cpp \
Rgesdd.cpp \
Rgesv.cpp \
Rgesvd.cpp \
Rgesvdq.cpp \
Rgesvj.cpp \
Rgesvx.cpp \
Rgetc2.cpp \
Rgetf2.cpp \
Rgetrf.cpp \
Rgetrf2.cpp \
Rgetri.cpp \
Rgetrs.cpp \
Rgetsls.cpp \
Rgetsqrhrt.cpp \
Rggbak.cpp \
Rggbal.cpp \
Rgges.cpp \
Rgges3.cpp \
Rggev.cpp \
Rggev3.cpp \
Rggglm.cpp \
Rgghd3.cpp \
Rgghrd.cpp \
Rgglse.cpp \
Rggqrf.cpp \
Rggrqf.cpp \
Rggsvd3.cpp \
Rggsvp3.cpp \
Rgsvj0.cpp \
Rgsvj1.cpp \
Rgtcon.cpp \
Rgtrfs.cpp \
Rgtsv.cpp \
Rgttrf.cpp \
Rgttrs.cpp \
Rgtts2.cpp \
Rhgeqz.cpp \
Rhseqr.cpp \
Risnan.cpp \
Rla_gbrpvgrw.cpp \
Rla_gerpvgrw.cpp \
Rla_wwaddw.cpp \
Rlabad.cpp \
Rlabrd.cpp \
Rlacn2.cpp \
Rlacpy.cpp \
Rladiv.cpp \
Rlae2.cpp \
Rlaed0.cpp \
Rlaed1.cpp \
Rlaed2.cpp \
Rlaed3.cpp \
Rlaed4.cpp \
Rlaed5.cpp \
Rlaed6.cpp \
Rlaed7.cpp \
Rlaed8.cpp \
Rlaed9.cpp \
Rlaeda.cpp \
Rlaev2.cpp \
Rlaexc.cpp \
Rlag2.cpp \
Rlags2.cpp \
Rlagtf.cpp \
Rlagtm.cpp \
Rlagts.cpp \
Rlagv2.cpp \
Rlahqr.cpp \
Rlahr2.cpp \
Rlaic1.cpp \
Rlaisnan.cpp \
Rlaln2.cpp \
Rlals0.cpp \
Rlalsa.cpp \
Rlalsd.cpp \
Rlamch.cpp \
Rlamrg.cpp \
Rlamswlq.cpp \
Rlamtsqr.cpp \
Rlaneg.cpp \
Rlangb.cpp \
Rlange.cpp \
Rlangt.cpp \
Rlanhs.cpp \
Rlansb.cpp \
Rlansp.cpp \
Rlanst.cpp \
Rlansy.cpp \
Rlantb.cpp \
Rlantr.cpp \
Rlanv2.cpp \
Rlaorhr_col_getrfnp.cpp \
Rlaorhr_col_getrfnp2.cpp \
Rlapll.cpp \
Rlapmr.cpp \
Rlapmt.cpp \
Rlapy2.cpp \
Rlapy3.cpp \
Rlaqgb.cpp \
Rlaqge.cpp \
Rlaqp2.cpp \
Rlaqps.cpp \
Rlaqr0.cpp \
Rlaqr1.cpp \
Rlaqr2.cpp \
Rlaqr3.cpp \
Rlaqr4.cpp \
Rlaqr5.cpp \
Rlaqsb.cpp \
Rlaqsp.cpp \
Rlaqsy.cpp \
Rlaqtr.cpp \
Rlar1v.cpp \
Rlar2v.cpp \
Rlarf.cpp \
Rlarfb.cpp \
Rlarfb_gett.cpp \
Rlarfg.cpp \
Rlarfgp.cpp \
Rlarft.cpp \
Rlarfx.cpp \
Rlarfy.cpp \
Rlargv.cpp \
Rlarra.cpp \
Rlarrc.cpp \
Rlarrj.cpp \
Rlarrr.cpp \
Rlarscl2.cpp \
Rlartg.cpp \
Rlartgp.cpp \
Rlartgs.cpp \
Rlartv.cpp \
Rlarz.cpp \
Rlarzb.cpp \
Rlarzt.cpp \
Rlas2.cpp \
Rlascl.cpp \
Rlascl2.cpp \
Rlasd0.cpp \
Rlasd1.cpp \
Rlasd2.cpp \
Rlasd3.cpp \
Rlasd4.cpp \
Rlasd5.cpp \
Rlasd6.cpp \
Rlasd7.cpp \
Rlasd8.cpp \
Rlasda.cpp \
Rlasdq.cpp \
Rlasdt.cpp \
Rlaset.cpp \
Rlasq1.cpp \
Rlasq2.cpp \
Rlasq3.cpp \
Rlasq4.cpp \
Rlasq5.cpp \
Rlasq6.cpp \
Rlasr.cpp \
Rlasrt.cpp \
Rlassq.cpp \
Rlasv2.cpp \
Rlaswlq.cpp \
Rlaswp.cpp \
Rlasy2.cpp \
Rlasyf.cpp \
Rlasyf_aa.cpp \
Rlasyf_rk.cpp \
Rlasyf_rook.cpp \
Rlatbs.cpp \
Rlatdf.cpp \
Rlatrd.cpp \
Rlatrs.cpp \
Rlatrz.cpp \
Rlatsqr.cpp \
Rlauu2.cpp \
Rlauum.cpp \
Ropgtr.cpp \
Rorbdb5.cpp \
Rorbdb6.cpp \
Rorg2l.cpp \
Rorg2r.cpp \
Rorgbr.cpp \
Rorghr.cpp \
Rorgl2.cpp \
Rorglq.cpp \
Rorgql.cpp \
Rorgqr.cpp \
Rorgr2.cpp \
Rorgrq.cpp \
Rorgtr.cpp \
Rorhr_col.cpp \
Rorm22.cpp \
Rorm2l.cpp \
Rorm2r.cpp \
Rormbr.cpp \
Rormhr.cpp \
Rorml2.cpp \
Rormlq.cpp \
Rormql.cpp \
Rormqr.cpp \
Rormr2.cpp \
Rormr3.cpp \
Rormrq.cpp \
Rormrz.cpp \
Rormtr.cpp \
Rpbequ.cpp \
Rpbsv.cpp \
Rpbtf2.cpp \
Rpbtrf.cpp \
Rpbtrs.cpp \
Rpocon.cpp \
Rpoequ.cpp \
Rpoequb.cpp \
Rporfs.cpp \
Rposv.cpp \
Rposvx.cpp \
Rpotf2.cpp \
Rpotrf.cpp \
Rpotrf2.cpp \
Rpotri.cpp \
Rpotrs.cpp \
Rppequ.cpp \
Rppsv.cpp \
Rpptrf.cpp \
Rpptrs.cpp \
Rptcon.cpp \
Rptrfs.cpp \
Rptsv.cpp \
Rptsvx.cpp \
Rpttrf.cpp \
Rpttrs.cpp \
Rptts2.cpp \
Rrscl.cpp \
Rsbev.cpp \
Rsbtrd.cpp \
Rsfrk.cpp \
Rspev.cpp \
Rspsv.cpp \
Rsptrd.cpp \
Rsptrf.cpp \
Rsptrs.cpp \
Rstedc.cpp \
Rsteqr.cpp \
Rsterf.cpp \
Rstev.cpp \
Rstevd.cpp \
Rsycon.cpp \
Rsyconv.cpp \
Rsyconvf.cpp \
Rsyconvf_rook.cpp \
Rsyequb.cpp \
Rsyev.cpp \
Rsyevd.cpp \
Rsygs2.cpp \
Rsygst.cpp \
Rsyrfs.cpp \
Rsysv.cpp \
Rsysv_aa.cpp \
Rsysv_aa_2stage.cpp \
Rsysv_rk.cpp \
Rsysv_rook.cpp \
Rsysvx.cpp \
Rsyswapr.cpp \
Rsytd2.cpp \
Rsytf2.cpp \
Rsytf2_rk.cpp \
Rsytf2_rook.cpp \
Rsytrd.cpp \
Rsytrf.cpp \
Rsytrf_aa.cpp \
Rsytrf_aa_2stage.cpp \
Rsytrf_rk.cpp \
Rsytrf_rook.cpp \
Rsytri.cpp \
Rsytri2.cpp \
Rsytri2x.cpp \
Rsytri_3.cpp \
Rsytri_3x.cpp \
Rsytri_rook.cpp \
Rsytrs.cpp \
Rsytrs2.cpp \
Rsytrs_3.cpp \
Rsytrs_aa.cpp \
Rsytrs_aa_2stage.cpp \
Rsytrs_rook.cpp \
Rtbtrs.cpp \
Rtgevc.cpp \
Rtgex2.cpp \
Rtgexc.cpp \
Rtgsen.cpp \
Rtgsja.cpp \
Rtgsy2.cpp \
Rtgsyl.cpp \
Rtplqt.cpp \
Rtplqt2.cpp \
Rtpmlqt.cpp \
Rtpmqrt.cpp \
Rtpqrt.cpp \
Rtpqrt2.cpp \
Rtprfb.cpp \
Rtptrs.cpp \
Rtpttr.cpp \
Rtrevc3.cpp \
Rtrexc.cpp \
Rtrsen.cpp \
Rtrsna.cpp \
Rtrsyl.cpp \
Rtrti2.cpp \
Rtrtri.cpp \
Rtrtrs.cpp \
Rtrttp.cpp \
Rtzrzf.cpp \
iCmax1.cpp \
iMladiag.cpp \
iMladlc.cpp \
iMladlr.cpp \
iMlaprec.cpp \
iMlatrans.cpp \
iMlauplo.cpp \
iMlazlc.cpp \
iMlazlr.cpp
#iMlaenv.cpp
